# CatskillsFusionSSTO

./: .gitignore  AUTHORS  CatskillsFusionSSTO-TAEM-set.xml  CatskillsFusionSSTO-approach-set.xml  CatskillsFusionSSTO-checklists.xml  CatskillsFusionSSTO-common.xml  CatskillsFusionSSTO-entry-set.xml  CatskillsFusionSSTO-glide-set.xml  CatskillsFusionSSTO-mission-set.xml  CatskillsFusionSSTO-orbit-set.xml  CatskillsFusionSSTO-set.xml  LICENSE  Makefile  README-SpaceFlight.txt  README.md  SpaceShuttle-common.xml  SpaceShuttle-mission-set.xml  asset_inventory.sh  bl.sh  build_orbitron_stand.sh  component_condition.xml  fg_assets.txt  fs.sh  gas_flow.md  key_bindings.xml  logic_inventory.sh  pyproject.toml  shuttle.xml  stand.sh
Dialogs/: apu.xml  cabin_lighting.xml  limits.xml  options.xml
Effects/: chute.eff  model-interior-display.eff  model-interior-extended.eff  model-interior-object.eff  model-interior-velcro.eff  plasma.eff
Engines/: SSME.xml  SSME_nozzle.xml
Mission/: columbia.xml  earlysts.xml  hst.xml  iss.xml  mission.xml  polarexpress.xml
Models/: OMSPods.xml  RHC-cmdr.xml  SSME1.xml  SSME2.xml  SSME3.xml  SpaceShuttle.xml  TailCone.xml  coas.xml  cockpit-damage.xml  cockpit-detailed.xml  cockpit.xml  cockpit_glass_broken.ac  cockpit_glass_broken.xml  cockpit_glass_outer.xml  etw.ac  external-fuel-tank.xml  external-tank-disconnectedw.xml  scom.xml  shuttle_o2-damage.xml  solid-rocket-booster-left.xml  solid-rocket-booster-right.xml  srb-left.xml  srb-right.xml  submodels.xml
Nasal/: TAEM_guidance.nas  aborts.nas  auto_launch.nas  carrier.nas  coas.nas  (+33 more)
(+312 files in other folders)
